samples/_failures_safe/1761652748_84a861_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9272264e.c: In function ‘main’:
./samples/SAFE/__tmp_9272264e.c:162:15: error: expected ‘;’ at end of input
  162 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_9272264e.c:162:9: error: expected declaration or statement at end of input
  162 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_9272264e.c:162:9: error: expected declaration or statement at end of input
